--- a/index.html
+++ b/index.html
@@ -4,11 +4,154 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Frontend Mentor Challenge Solution — by kaffeenj</title>
+
+	<!-- Favicons -->
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+	<link rel="manifest" href="assets/favicons/site.webmanifest">
+	<link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+	<link rel="shortcut icon" href="assets/favicons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#2b5797">
+	<meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#ffffff">
+
+	<!-- Fonts -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<!-- Poppins font -->
+	<link
+		href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+		rel="stylesheet">
+	<!-- Raleway font -->
+	<link
+		href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+		rel="stylesheet">
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="assets/css/index.css">
+
+	<title>glamorrr</title>
 </head>
 
-<body>
+<body class="bg-gray-50 font-raleway text-gray-900">
+	<header class="py-2 bg-gray-900 flex justify-center items-center">
+		<a href="https://github.com/glamorrr/cool-sites" target="_blank">
+			<svg class="w-12 h-12 mx-auto fill-current text-white hover:text-gray-100 transition-colors"
+				xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+				<path
+					d="M256 32C132.3 32 32 134.9 32 261.7c0 101.5 64.2 187.5 153.2 217.9a17.56 17.56 0 003.8.4c8.3 0 11.5-6.1 11.5-11.4 0-5.5-.2-19.9-.3-39.1a102.4 102.4 0 01-22.6 2.7c-43.1 0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1 1.4-14.1h.1c22.5 2 34.3 23.8 34.3 23.8 11.2 19.6 26.2 25.1 39.6 25.1a63 63 0 0025.6-6c2-14.8 7.8-24.9 14.2-30.7-49.7-5.8-102-25.5-102-113.5 0-25.1 8.7-45.6 23-61.6-2.3-5.8-10-29.2 2.2-60.8a18.64 18.64 0 015-.5c8.1 0 26.4 3.1 56.6 24.1a208.21 208.21 0 01112.2 0c30.2-21 48.5-24.1 56.6-24.1a18.64 18.64 0 015 .5c12.2 31.6 4.5 55 2.2 60.8 14.3 16.1 23 36.6 23 61.6 0 88.2-52.4 107.6-102.3 113.3 8 7.1 15.2 21.1 15.2 42.5 0 30.7-.3 55.5-.3 63 0 5.4 3.1 11.5 11.4 11.5a19.35 19.35 0 004-.4C415.9 449.2 480 363.1 480 261.7 480 134.9 379.7 32 256 32z" />
+			</svg>
+		</a>
+	</header>
 
+	<div class="max-w-1366px mx-auto">
+
+		<div class="flex flex-wrap justify-center my-10 px-6">
+
+			<div class="md:m-6">
+				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+					<img src="assets/images/easybank-landing-page.jpg" alt="Easybank Landing Page Website Image">
+				</div>
+				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
+					<h1 class="font-poppins text-xl font-semibold text-center">Easybank Landing Page</h1>
+					<p class="mt-1 uppercase text-sm text-gray-700 text-center">
+						<a class="border-dotted border-b-2 hover:text-green-600 hover:border-green-600 transition-all tracking-wider"
+							href="/easybank-landing-page">Demo</a>
+						&bull;
+						<a class="border-dotted border-b-2 hover:text-gray-900 hover:border-gray-900 transition-all tracking-wider"
+							href="https://github.com/glamorrr/cool-sites/tree/master/easybank-landing-page" target="_blank">Code</a>
+					</p>
+					<p class="mt-4 text-xs text-gray-700 text-center">
+						Design by: <a class="border-dotted border-b-2 hover:text-indigo-600 hover:border-indigo-600 transition-all"
+							href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+					</p>
+				</article>
+			</div>
+
+			<div class="mt-8 md:m-6">
+				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+					<img src="assets/images/huddle-landing-page.jpg" alt="Huddle Landing Page Website Image">
+				</div>
+				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
+					<h1 class="font-poppins text-xl font-semibold text-center">Huddle Landing Page</h1>
+					<p class="mt-1 uppercase text-sm text-gray-700 text-center">
+						<a class="border-dotted border-b-2 hover:text-green-600 hover:border-green-600 transition-all tracking-wider"
+							href="/huddle-landing-page">Demo</a>
+						&bull;
+						<a class="border-dotted border-b-2 hover:text-gray-900 hover:border-gray-900 transition-all tracking-wider"
+							href="https://github.com/glamorrr/cool-sites/tree/master/huddle-landing-page" target="_blank">Code</a>
+					</p>
+					<p class="mt-4 text-xs text-gray-700 text-center">
+						Design by: <a class="border-dotted border-b-2 hover:text-indigo-600 hover:border-indigo-600 transition-all"
+							href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+					</p>
+				</article>
+			</div>
+
+			<div class="mt-8 md:m-6">
+				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+					<img src="assets/images/manage-landing-page.jpg" alt="Manage Landing Page Website Image">
+				</div>
+				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
+					<h1 class="font-poppins text-xl font-semibold text-center">Manage Landing Page</h1>
+					<p class="mt-1 uppercase text-sm text-gray-700 text-center">
+						<a class="border-dotted border-b-2 hover:text-green-600 hover:border-green-600 transition-all tracking-wider"
+							href="/manage-landing-page">Demo</a>
+						&bull;
+						<a class="border-dotted border-b-2 hover:text-gray-900 hover:border-gray-900 transition-all tracking-wider"
+							href="https://github.com/glamorrr/cool-sites/tree/master/manage-landing-page" target="_blank">Code</a>
+					</p>
+					<p class="mt-4 text-xs text-gray-700 text-center">
+						Design by: <a class="border-dotted border-b-2 hover:text-indigo-600 hover:border-indigo-600 transition-all"
+							href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+					</p>
+				</article>
+			</div>
+
+			<div class="mt-8 md:m-6">
+				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+					<img src="assets/images/social-proof-section.jpg" alt="Social Proof Section Website Image">
+				</div>
+				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
+					<h1 class="font-poppins text-xl font-semibold text-center">Social Proof Section</h1>
+					<p class="mt-1 uppercase text-sm text-gray-700 text-center">
+						<a class="border-dotted border-b-2 hover:text-green-600 hover:border-green-600 transition-all tracking-wider"
+							href="/social-proof-section">Demo</a>
+						&bull;
+						<a class="border-dotted border-b-2 hover:text-gray-900 hover:border-gray-900 transition-all tracking-wider"
+							href="https://github.com/glamorrr/cool-sites/tree/master/social-proof-section" target="_blank">Code</a>
+					</p>
+					<p class="mt-4 text-xs text-gray-700 text-center">
+						Design by: <a class="border-dotted border-b-2 hover:text-indigo-600 hover:border-indigo-600 transition-all"
+							href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+					</p>
+				</article>
+			</div>
+
+			<div class="mt-8 md:m-6">
+				<div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+					<img src="assets/images/testimonials-grid-section.jpg" alt="Testimonials Grid Section Website Image">
+				</div>
+				<article class="relative max-w-xs p-4 mx-4 sm:mx-auto -mt-8 bg-white rounded-lg shadow-lg">
+					<h1 class="font-poppins text-xl font-semibold text-center">Testimonials Grid Section</h1>
+					<p class="mt-1 uppercase text-sm text-gray-700 text-center">
+						<a class="border-dotted border-b-2 hover:text-green-600 hover:border-green-600 transition-all tracking-wider"
+							href="/testimonials-grid-section">Demo</a>
+						&bull;
+						<a class="border-dotted border-b-2 hover:text-gray-900 hover:border-gray-900 transition-all tracking-wider"
+							href="https://github.com/glamorrr/cool-sites/tree/master/testimonials-grid-section"
+							target="_blank">Code</a>
+					</p>
+					<p class="mt-4 text-xs text-gray-700 text-center">
+						Design by: <a class="border-dotted border-b-2 hover:text-indigo-600 hover:border-indigo-600 transition-all"
+							href="https://frontendmentor.io" target="_blank">Frontend Mentor</a>
+					</p>
+				</article>
+			</div>
+
+		</div>
+
+	</div>
 </body>
 
 </html>
