--- a/index.html
+++ b/index.html
@@ -55,19 +55,11 @@
     <title>glamorrr</title>
   </head>
 
-  <body class="bg-gray-50 font-raleway text-gray-900">
-    <header class="py-2 bg-gray-900 flex justify-center items-center">
+  <body class="text-gray-900 bg-gray-50 font-raleway">
+    <header class="flex items-center justify-center py-2 bg-gray-900">
       <a href="https://github.com/glamorrr/cool-sites" target="_blank">
         <svg
-          class="
-            w-12
-            h-12
-            mx-auto
-            fill-current
-            text-white
-            hover:text-gray-100
-            transition-colors
-          "
+          class="w-12 h-12 mx-auto text-white transition-colors fill-current  hover:text-gray-100"
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 512 512"
         >
@@ -78,10 +70,10 @@
       </a>
     </header>
 
-    <div class="max-w-1366px mx-auto">
-      <div class="flex flex-wrap justify-center my-10 px-6">
+    <div class="mx-auto max-w-1366px">
+      <div class="flex flex-wrap justify-center px-6 my-10">
         <div class="md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="282"
@@ -90,53 +82,29 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Easybank Landing Page
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="/easybank-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-gray-900 hover:border-gray-900
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/easybank-landing-page"
                 target="_blank"
                 >Code</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-indigo-600 hover:border-indigo-600
-                  transition-all
-                "
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -146,7 +114,7 @@
         </div>
 
         <div class="mt-8 md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="282"
@@ -155,53 +123,29 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Huddle Landing Page
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="/huddle-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-gray-900 hover:border-gray-900
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/huddle-landing-page"
                 target="_blank"
                 >Code</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-indigo-600 hover:border-indigo-600
-                  transition-all
-                "
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -211,7 +155,7 @@
         </div>
 
         <div class="mt-8 md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="282"
@@ -220,53 +164,29 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Manage Landing Page
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="/manage-landing-page"
                 >Demo</a
               >
               &bull;
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-gray-900 hover:border-gray-900
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/manage-landing-page"
                 target="_blank"
                 >Code</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-indigo-600 hover:border-indigo-600
-                  transition-all
-                "
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -276,7 +196,7 @@
         </div>
 
         <div class="mt-8 md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="282"
@@ -285,53 +205,29 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Social Proof Section
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="/social-proof-section"
                 >Demo</a
               >
               &bull;
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-gray-900 hover:border-gray-900
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/social-proof-section"
                 target="_blank"
                 >Code</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-indigo-600 hover:border-indigo-600
-                  transition-all
-                "
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -341,7 +237,7 @@
         </div>
 
         <div class="mt-8 md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="281"
@@ -350,53 +246,29 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Testimonials Grid Section
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="/testimonials-grid-section"
                 >Demo</a
               >
               &bull;
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-gray-900 hover:border-gray-900
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
                 href="https://github.com/glamorrr/cool-sites/tree/master/testimonials-grid-section"
                 target="_blank"
                 >Code</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by:
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-indigo-600 hover:border-indigo-600
-                  transition-all
-                "
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
                 href="https://frontendmentor.io"
                 target="_blank"
                 >Frontend Mentor</a
@@ -406,7 +278,7 @@
         </div>
 
         <div class="mt-8 md:m-6">
-          <div class="relative max-w-sm rounded-lg overflow-hidden shadow-md">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
             <img
               width="384"
               height="281"
@@ -415,36 +287,62 @@
             />
           </div>
           <article
-            class="
-              relative
-              max-w-xs
-              p-4
-              mx-4
-              sm:mx-auto
-              -mt-8
-              bg-white
-              rounded-lg
-              shadow-lg
-            "
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
           >
-            <h1 class="font-poppins text-xl font-semibold text-center">
+            <h1 class="text-xl font-semibold text-center font-poppins">
               Productivity Website
             </h1>
-            <p class="mt-1 uppercase text-sm text-gray-700 text-center">
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
               <a
-                class="
-                  border-dotted border-b-2
-                  hover:text-green-600 hover:border-green-600
-                  transition-all
-                  tracking-wider
-                "
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
                 href="https://jejak.vercel.app"
                 target="_blank"
                 >Demo</a
               >
             </p>
-            <p class="mt-4 text-xs text-gray-700 text-center">
+            <p class="mt-4 text-xs text-center text-gray-700">
               Design by: Toni
+            </p>
+          </article>
+        </div>
+
+        <div class="md:m-6">
+          <div class="relative max-w-sm overflow-hidden rounded-lg shadow-md">
+            <img
+              width="384"
+              height="282"
+              src="assets/images/juicedaily.jpg"
+              alt="Juicedaily image"
+            />
+          </div>
+          <article
+            class="relative max-w-xs p-4 mx-4 -mt-8 bg-white rounded-lg shadow-lg  sm:mx-auto"
+          >
+            <h1 class="text-xl font-semibold text-center font-poppins">
+              Juicedaily Landing Page
+            </h1>
+            <p class="mt-1 text-sm text-center text-gray-700 uppercase">
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-green-600 hover:border-green-600"
+                href="/juicedaily"
+                >Demo</a
+              >
+              &bull;
+              <a
+                class="tracking-wider transition-all border-b-2 border-dotted  hover:text-gray-900 hover:border-gray-900"
+                href="https://github.com/glamorrr/cool-sites/tree/master/juicedaily"
+                target="_blank"
+                >Code</a
+              >
+            </p>
+            <p class="mt-4 text-xs text-center text-gray-700">
+              Design by:
+              <a
+                class="transition-all border-b-2 border-dotted  hover:text-indigo-600 hover:border-indigo-600"
+                href="https://https://www.figma.com/community/file/966938373747932093"
+                target="_blank"
+                >Dwinawan</a
+              >
             </p>
           </article>
         </div>
